--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
     <title>Day 3 In-Class Project</title>
   </head>
 
-  <body>
-
+  <body class="container-fluid">
+    <header>
+      <nav>
+        <img src="" alt="">
+        <ul class="nav nav-pills navbar-right text-center">
+          <li role="presentation" class="active"><a href="#">Home</a></li>
+          <li role="presentation"><a href="#">About</a></li>
+          <li role="presentation"><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
