Finished Nav. Site Barebones.

--- a/index.html
+++ b/index.html
@@ -8,20 +8,58 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/styles.css">
-    <title>Day 3 In-Class Project</title>
+    <title>Day 4 In-Class Project</title>
   </head>
 
-  <body class="container-fluid">
-    <header>
+  <body>
+    <header class="container-fluid">
       <nav>
-        <img src="" alt="">
-        <ul class="nav nav-pills navbar-right text-center">
+        <img src="https://openclipart.org/image/2400px/svg_to_png/232062/Logo-Logo-Grayscale.png" alt="" class="img-responsive"/>
+        <ul class="nav nav-pills pull-right text-center">
           <li role="presentation" class="active"><a href="#">Home</a></li>
           <li role="presentation"><a href="#">About</a></li>
           <li role="presentation"><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
+    <main class="container-fluid">
+      <div class="jumbotron">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde dicta eligendi aliquam?</p>
+      </div>
+
+      <h3 class="pull-left">Section Header</h3>
+
+      <div class="clearfix"></div>
+
+      <div class="container-fluid row row-style">
+        <div class="col-xs-4 well well-sm well-style">
+
+        </div>
+
+        <div class="col-xs-2 well well-sm well-style-small">
+
+        </div>
+
+        <div class="col-xs-2 well well-sm well-style-small">
+
+        </div>
+
+        <div class="clearfix"></div>
+        
+        <div class="container-fluid row row-style">
+          <div class="col-xs-4 well well-sm well-style">
+
+          </div>
+
+          <div class="col-xs-2 well well-sm well-style-small">
+
+          </div>
+
+          <div class="col-xs-2 well well-sm well-style-small">
+
+          </div>
+
+    </main>
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
