Finish NAV Mobile First Responsive Scaling.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>Day 4 In-Class Project</title>
   </head>
 
-  <body>
+  <body class="container-fluid">
     <header class="container-fluid">
       <nav>
-        <img src="https://openclipart.org/image/2400px/svg_to_png/232062/Logo-Logo-Grayscale.png" alt="" class="img-responsive"/>
+        <img src="https://openclipart.org/image/2400px/svg_to_png/232062/Logo-Logo-Grayscale.png" alt="" class="img-responsive" id="logo"/>
         <ul class="nav nav-pills pull-right text-center">
           <li role="presentation" class="active"><a href="#">Home</a></li>
           <li role="presentation"><a href="#">About</a></li>
@@ -45,7 +45,7 @@
         </div>
 
         <div class="clearfix"></div>
-        
+
         <div class="container-fluid row row-style">
           <div class="col-xs-4 well well-sm well-style">
 
